fix: ajouter un alignement centré au texte des boutons pour une meilleure présentation

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -203,6 +203,7 @@ button{
             margin-top: 25%;
             font-size: x-large;
             padding: 10px 20px;
+            text-align: center;
         }
         .a-propos, .competence, .cv, .contact {
             width: 70%;
